--- a/TopBargain/templates_/TopBargain/index.html
+++ b/TopBargain/templates_/TopBargain/index.html
@@ -9,7 +9,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,900" rel="stylesheet">
 	<title>React App</title>
 	{% load static %}
-	<link href="{% static '/static/css/main.927bd5ad.css' %}" rel="stylesheet">
+	<link href="{% static '/static/css/main.css' %}" rel="stylesheet">
 </head>
 	<body><noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="root"></div>
